# cw-data-handler

./: .gitignore
.github/workflows/: c-cpp.yml
Consumer/: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  config.example.json
Consumer/build-ci/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  Makefile  VersionInfo.h  cmake_install.cmake  compile_commands.json  cw-data-transfer
Consumer/include/: PostgresClient.h
Consumer/src/: LavinMQ.cpp  LavinMQ.h  MqttClient.cpp  MqttClient.h  PostgresClient.cpp  main.cpp
Consumer/src/DTOs/: LoRaWanDTO.h
Producer/: CMakeLists.txt
Producer/include/: config_loader.h  lavinmq_publisher.h  mqtt_handler.h
Producer/src/: config.example.json  config_loader.cpp  lavinmq_publisher.cpp  main.cpp  mqtt_handler.cpp
